--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1,106 +1,106 @@
 ---
 images:
-- name: bf-skinner-gauge-on-aircraft-carrier.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-gauge-on-aircraft-carrier.jpg
-- name: miamibeach-miamibeach-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-yellow-collage.jpg
-- name: oldsmallboat-oldsmallboat-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-post-modern.jpg
-- name: downtown-los-angeles-downtown-la-blue-circuit-5.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit-5.JPG
-- name: old-gas-pumps-oldgaspumps-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dark-rain.jpg
-- name: castle-wall-DSC-0067-kandinsky-bv.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-kandinsky-bv.JPG
-- name: containership-containership-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purple-storm.jpg
-- name: dragon_close-up-scream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-scream.jpg
-- name: bf-skinner-astoria-bridge-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-astoria-bridge-columbia.jpg
-- name: oldtrain-oldtrain-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dry-skin.jpg
-- name: miamibeach-miamibeach-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-atari-missle.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
-- name: stories-new-27-93-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--5--5.jpg
-- name: docks-docks-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-brush.jpg
-- name: adam-smith-adam-smith-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-dali.jpg
-- name: ellis-island-ellisisland-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-graham-sutherland.jpg
-- name: capital-battle-capitolbattle-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-granite.jpg
-- name: oldhouse-granaryfield-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-hot-spicy.jpg
-- name: border-crossing-bordercrossing-internet-numbers.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-internet-numbers.png
-- name: amusement-park-amusement-park-2-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-kand-two.jpg
-- name: liberty-back-statue-liberty-back-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-rainbow-festival.jpg
-- name: blossombar-gred-mash-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gred-mash-file-00-00-24-99.jpg
-- name: old-gas-pumps-oldgaspumps-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-emily-carr.jpg
-- name: copper-circuit-castle-window_35928999923_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-castle-window_35928999923_o.jpg
-- name: yosemite-yosemite-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-nazi-poster.jpg
-- name: crow-crow-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-hot-spicy.jpg
-- name: aws-s3-stories-carryload-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-diego-rivera1.jpg
-- name: rain-princess-cannon_36556797762_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-cannon_36556797762_o.jpg
-- name: downtheline-downtheline-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crafty-painting.jpg
-- name: blossombar-dry-skin-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dry-skin-file-00-00-00-00.jpg
-- name: server-cloud-server-racks-clouds-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-spagetti-accident.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-post-modern.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-clean-view.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-clean-view.png
-- name: abandonedbuildings_diego_rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_diego_rivera1.jpg
-- name: stalin-time-construction-zone-claw.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-construction-zone-claw.jpg
-- name: store-on-corner-store-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-sand-paper.jpg
-- name: christianity-christianity-under-construction-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-crafty-painting.jpg
-- name: oldhouse-granaryfield-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-purple-storm.jpg
-- name: downtown-los-angeles-downtown-la-purp-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-purp-paper.JPG
-- name: san-francisco-city-bridge-sf-city-bridge-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-far-away.jpg
-- name: statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
-- name: containership-containership-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-space-pizza.jpg
-- name: bluelake-blue-brush-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-00-00.jpg
-- name: razorwire-DSC-0080-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-umberto-bocc.jpg
-- name: copper-circuit-underground-subway_35929749683_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-underground-subway_35929749683_o.jpg
-- name: liberty-back-statue-liberty-back-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-wols.jpg
-- name: stories-statue-face-open-mouth-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-copper-circuit.png
-- name: server-cloud-server-racks-clouds-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-space-pizza.jpg
-- name: mistywoods-babyfoot-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-sand-paper.jpg
-- name: braceros-domingo-ulloa-white-house-west-wing-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-white-house-west-wing-view.jpg
-- name: rockingchair-rockingchair-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-really-hot.jpg
+- name: walled-garden-walled-garden-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purp-paper.jpg
+- name: aws-s3-square-statue-face-open-mouth-copper-circuit-square.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-statue-face-open-mouth-copper-circuit-square.png
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
+- name: old-gas-pumps-oldgaspumps-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colored-circuits.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-feed-people.jpg
+- name: bf-skinner-christ-cross-chalice.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-christ-cross-chalice.jpg
+- name: trucksilo-trucksilo-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-purple-pond.jpg
+- name: carry-load-carryload-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sand-paper.jpg
+- name: rain-princess-city-vancouver-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-city-vancouver-clouds.jpg
+- name: downtown-la-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-copper-circuit.JPG
+- name: aws-s3-stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
+- name: bf-skinner-hollywood-sign-hills.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hollywood-sign-hills.jpg
+- name: yosemite-yosemite-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-colorful-blocks.jpg
+- name: curtain-curtain-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-umberto-bocc.jpg
+- name: stories-cargo-ship-on-sea-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-constitution.jpg
+- name: catacombs-catacombs-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-attack-planes.jpg
+- name: old-barn-old-barn-1500-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-spagetti-accident.jpg
+- name: braceros-domingo-ulloa-desert-road-mountains.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-desert-road-mountains.jpg
+- name: mosaic-face-mosaic-face-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-circuit-4.jpg
+- name: art-museum-art-museum-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-purple-storm.jpg
+- name: stalin-time-british-black-cab-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-british-black-cab-street.jpg
+- name: fence-mexico-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-monet-one.jpg
+- name: flower-barbed-wire-flower-barbed-wire-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-cinnamon-rolls.jpg
+- name: docks-docks-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-sunday.jpg
+- name: old-granary-field-oldhouse-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-alien-goggles.jpg
+- name: window-window-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crunch-paper.jpg
+- name: capital-battle-capitolbattle-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-green-zuma.jpg
+- name: stalin-time-stairs-down-blue-green.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-stairs-down-blue-green.jpg
+- name: legal-statue-legalstatue-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-far-away.jpg
+- name: lincoln-memorial-lincolnmemorial-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-brush.jpg
+- name: death-valley-death-valley-national-park-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-graham-sutherland.jpg
+- name: fence-gorilla-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-dark-dali.jpg
+- name: nazi-invasion-old-broken-piano-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-broken-piano-street.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dali-three.png
+- name: beach-rocks-beach-rocks-currents-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-plentiful.jpg
+- name: copper-circuit-seattle-shipping-people-walking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seattle-shipping-people-walking.jpg
+- name: old-cabin-oldcabin-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-bright-sand.jpg
+- name: capital-battle-capitolbattle-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-hot-spicy.jpg
+- name: blossombar-really-hot-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-really-hot-file-00-00-00-00.jpg
+- name: oldsmallboat-oldsmallboat-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-mucha-mult.jpg
+- name: copper-circuit-roman-marcus-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-roman-marcus-looking-down.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-smoking-cigarette.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-smoking-cigarette.png
+- name: la-muse-nyc-coming-in-on-train.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-nyc-coming-in-on-train.jpg
+- name: berlinwall-DSC-0084-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-gan-vogh.jpg
+- name: cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
+- name: old-house-oldhouse-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-alberto-giacometti.jpg
+- name: razorwire-DSC-0080-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-post-modern.jpg
+- name: bf-skinner-working-waterfront-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-waterfront-2.jpg
+- name: copper-circuit-IMG_6200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_6200.jpg
+- name: oldbarn-oldbarn-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-matrix.jpg
 ---
 
